--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -47,12 +47,26 @@
 				class="w3-tiny"
 				title="{{doctypes_level2.map[el.doctype].p1_doctype
 				}}.{{doctypes_level2.map[el.doctype].doctype}} {{el.doc_id}}">[{{el.doctype}}]
-			</sub> <span data-ng-if="el.reference"> 
-			<span class="am-b" data-ng-if="complex_types.map[el.reference]">
-						{{complex_types.map[el.reference].complex_type_name}}:</span>
-					{{datadictionary.elementsMap[el.reference].value}} <span
+			</sub> <span data-ng-if="el.reference"> <span class="am-b"
+					data-ng-if="complex_types.map[el.reference]">
+						{{complex_types.map[el.reference].complex_type_name}}: <a
+						class="w3-tiny"
+						href="/f/c4/j2c_json_editor.html?jsonId={{el.reference-1}}"><i
+							class="fa fa-external-link"></i></a>
+				</span> {{datadictionary.elementsMap[el.reference].value}} <span
+				class="am-i"
+					data-ng-if="!datadictionary.elementsMap[el.reference]">
+						{{doc_data_workdata.elementsMap[el.reference].value}} </span> <!-- 
+					<span
 					data-ng-include="'/f/am-dev/1c-db-tables2/doc_17_dd_el_values.html'"
 					data-ng-repeat="dd_el in [datadictionary.elementsMap[el.reference], complex_types.map[el.reference]]"></span>
+					 --> 
+					<span
+					data-ng-include="'/f/am-dev/1c-db-tables2/doc_17_dd_el_values.html'"
+					data-ng-repeat="dd_el in [complex_types.map[el.reference]]"></span>
+					<span
+					data-ng-include="'/f/am-dev/1c-db-tables2/doc_17_dd_el_values.html'"
+					data-ng-repeat="dd_el in [datadictionary.elementsMap[el.reference]]"></span>
 			</span>
 			</span>
 		</div>
