--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -54,9 +54,13 @@
 						href="/f/c4/j2c_json_editor.html?jsonId={{el.reference-1}}"><i
 							class="fa fa-external-link"></i></a>
 				</span> {{datadictionary.elementsMap[el.reference].value}} <span
-				class="am-i"
-					data-ng-if="!datadictionary.elementsMap[el.reference]">
-						{{doc_data_workdata.elementsMap[el.reference].value}} </span> <!-- 
+					class="am-i" data-ng-if="!datadictionary.elementsMap[el.reference]">
+						<span
+						data-ng-if="!doc_data_workdata.elementsMap[el.reference].children 
+						&& 'DataDictionary'!=doc_data_workdata.elementsMap[doc_data_workdata.elementsMap[el.reference].parent].value">
+							{{doc_data_workdata.elementsMap[doc_data_workdata.elementsMap[el.reference].parent].value}}
+					</span> {{doc_data_workdata.elementsMap[el.reference].value}}
+				</span> <!-- 
 					<span
 					data-ng-include="'/f/am-dev/1c-db-tables2/doc_17_dd_el_values.html'"
 					data-ng-repeat="dd_el in [datadictionary.elementsMap[el.reference], complex_types.map[el.reference]]"></span>
