--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -43,7 +43,13 @@
 				</div>
 			</span> <span class=""> <span
 				ng-if="!el.value && !el.reference"> col_{{el.doc_id}} </span> <span
-				title=" col_{{el.doc_id}}" ng-if="el.value"> {{el.value}} </span> <sub
+				title=" col_{{el.doc_id}}" ng-if="el.value"> 
+				{{el.value}} 
+			</span> 
+				{{el.vreal}} 
+			<span data-ng-if="el.string_reference">- {{el.string_reference}} </span>
+			<span data-ng-if="el.string_reference2">-- {{el.string_reference2}} </span>
+			<sub
 				class="w3-tiny"
 				title="{{doctypes_level2.map[el.doctype].p1_doctype
 				}}.{{doctypes_level2.map[el.doctype].doctype}} {{el.doc_id}}">[{{el.doctype}}]
