--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -48,6 +48,7 @@
 			</span> 
 				{{el.vreal}} 
 			<span data-ng-if="el.string_reference">- {{el.string_reference}} </span>
+			<span data-ng-if="el.inn_reference2">- {{el.inn_reference2}} </span>
 			<span data-ng-if="el.string_reference2">-- {{el.string_reference2}} </span>
 			<sub
 				class="w3-tiny"
