--- a/src/main/resources/static/f/c4/dm/documents.html
+++ b/src/main/resources/static/f/c4/dm/documents.html
@@ -20,7 +20,8 @@
 			href="/f/c4/j2c_table_editor.html?tableId={{tr.doc_id}}">
 				{{tr.value}}</a> <a data-ng-if="!isTable"
 			href="/f/c4/j2c_json_editor.html?jsonId={{tr.doc_id}}">
-				{{tr.value}}</a></td>
+				{{tr.value}}</a> <span class="w3-tiny" style="vertical-align: sub;">
+				({{tr.doc_id}}) </span></td>
 		<td class="w3-tiny w3-border w3-border-white w3-hover-border-gray">
 			<a href="?folderId={{tr.parent}}"
 			class="w3-hover-shadow w3-hover-light-gray"
