--- a/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/doc_element.html
@@ -41,18 +41,14 @@
 							class="w13-bar-item w3-button"><i class="fa fa-paste"></i></a>
 					</div>
 				</div>
-			</span> <span class=""> <span
-				ng-if="!el.value && !el.reference"> col_{{el.doc_id}} </span> <span
-				title=" col_{{el.doc_id}}" ng-if="el.value"> 
-				{{el.value}} 
-			</span> 
-				{{el.vreal}} 
-			<span data-ng-if="el.string_reference">- {{el.string_reference}} </span>
-			<span data-ng-if="el.inn_reference2"
+			</span> <span class=""> <span ng-if="!el.value"
+				class="w3-tiny"> <span data-ng-if="!el.reference">el_</span>{{el.doc_id}}
+			</span> <span title=" col_{{el.doc_id}}" ng-if="el.value">
+					{{el.value}} </span> {{el.vreal}} <span data-ng-if="el.string_reference">-
+					{{el.string_reference}} </span> <span data-ng-if="el.inn_reference2"
 				data-ng-bind-html="highlight(el.inn_reference2, elParent.seekInChildren)"></span>
-				<span data-ng-if="el.string_reference2">-- {{el.string_reference2}} </span>
-			<sub
-				class="w3-tiny"
+				<span data-ng-if="el.string_reference2">--
+					{{el.string_reference2}} </span> <sub class="w3-tiny"
 				title="{{doctypes_level2.map[el.doctype].p1_doctype
 				}}.{{doctypes_level2.map[el.doctype].doctype}} {{el.doc_id}}">[{{el.doctype}}]
 			</sub> <span data-ng-if="el.reference"> <span class="am-b"
@@ -72,8 +68,7 @@
 					<span
 					data-ng-include="'/f/am-dev/1c-db-tables2/doc_17_dd_el_values.html'"
 					data-ng-repeat="dd_el in [datadictionary.elementsMap[el.reference], complex_types.map[el.reference]]"></span>
-					 --> 
-					<span
+					 --> <span
 					data-ng-include="'/f/am-dev/1c-db-tables2/doc_17_dd_el_values.html'"
 					data-ng-repeat="dd_el in [complex_types.map[el.reference]]"></span>
 					<span
