--- a/src/main/resources/static/f/c4/dm/folders.html
+++ b/src/main/resources/static/f/c4/dm/folders.html
@@ -9,12 +9,8 @@
 							class="w3-button"><i class="fa fa-plus"></i></a>
 					</div>
 				</div>
-		</span>
-		<a href="?">
-		<span class="am-b"> Папка </span>
-		</a>
-		{{folders.selectedObj}}
-		</td>
+		</span> <a href="?"> <span class="am-b"> Папка </span>
+		</a> {{folders.selectedObj}}</td>
 		<td class="am-b"><span
 			class="w3-hover-shadow w3-hover-light-gray"
 			data-ng-click="o.openAllFolders = !o.openAllFolders"> <i
@@ -51,8 +47,26 @@
 						data-ng-click="pageVar.openEditRow2(o, tr)"><i
 						class="fa fa-pencil-square-o"></i> Змінити</a>
 				</div>
-		</span> <a title="{{tr.doc_id}}" href="?folderId={{tr.doc_id}}">
-				{{tr.value}}</a>
+		</span> <span class="w3-small"
+			data-ng-if="(o.list[$index].parent>0 && o.list[$index+1].parent==o.list[$index].parent) 
+			&& !(o.list[$index].parent>0 && o.list[$index-1].parent==o.list[$index].parent)">
+			<span
+				data-ng-class="{
+			'w3-green':tr.parent==request.parameters.folderId,
+			}">-</span>
+				<a href="?folderId={{tr.parent}}">
+					{{o.list[$index].parent}}</a>&nbsp;
+		</span> <span class="w3-small"
+			data-ng-if="o.list[$index].parent>0 && o.list[$index-1].parent==o.list[$index].parent">
+				<span
+				data-ng-class="{
+			'w3-green':tr.parent==request.parameters.folderId,
+			}">+</span>
+				<a href="?folderId={{o.list[$index].parent}}">
+					{{o.list[$index].parent}}</a>&nbsp;
+		</span> <a title="{{tr.parent}}" href="?folderId={{tr.doc_id}}"> <span
+				class="w3-tiny">{{tr.doc_id}}</span> {{tr.value}}
+		</a>
 			<div class="w3-panel w3-leftbar" data-ng-if="tr.openSubFolder">
 				<a href="?folderId={{tr.parent}}" class="w3-hover-shadow"><i
 					class="fa fa-arrow-up" aria-hidden="true"></i></a> | <span
