--- a/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C_edit_row.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables2/tableJ2C_edit_row.html
@@ -6,6 +6,7 @@
 				data-ng-click="pageVar.ngStyleModal={display:'none'}">Cancel</button>
 		</div>
 		<div class="w3-col m9 l9 s9 ">
+		{{pageVar.o.ngIncludes.modalBottonPanel}}
 			<div data-ng-include="pageVar.o.ngIncludes.modalBottonPanel"></div>
 		</div>
 	</div>
